--- a/libro/AsociacionDispositivosFotovoltaicos.tex
+++ b/libro/AsociacionDispositivosFotovoltaicos.tex
@@ -35,7 +35,7 @@ El encapsulante a base de EVA, combinado con un tratamiento en vacío
 y las capas frontal y posterior, evita la entrada de humedad en el
 módulo, señalada como la causa principal de la degradación a largo
 plazo de módulos fotovoltaicos. Además, esta combinación permite obtener
-altos niveles de aislamiento eléctrico \citep{Wenham.Green.ea2000}. 
+altos niveles de aislamiento eléctrico \cite{Wenham.Green.ea2000}. 
 
 Una configuración eléctrica muy común hasta hace unos años empleaba
 36 células en serie para obtener módulos con potencias comprendidas
@@ -62,7 +62,7 @@ asociada a esta normativa.
 \subsection{Modelado de un módulo}
 
 Para modelar el funcionamiento de un módulos realizaremos las siguientes
-suposiciones, similares a las adoptadas para la célula solar \citep{Lorenzo2006c}:
+suposiciones, similares a las adoptadas para la célula solar \cite{Lorenzo2006c}:
 \needspace{4\onelineskip}
 \begin{itemize}
 \item Los efectos de la resistencia paralelo son despreciables.
@@ -118,7 +118,7 @@ electricidad esta radiación efectiva (sección \ref{sec:RadiacionEfectiva}),
 mientras que el resto de potencia no aprovechada debe ser entregada
 en forma de calor al entorno. El principal mecanismo para la disipación
 del calor en los paneles planos terrestres es la convección. Los procesos
-radiativos son secundarios aunque no despreciables \citep{Luque.Hegedus2003}.
+radiativos son secundarios aunque no despreciables \cite{Luque.Hegedus2003}.
 Este balance queda recogido en la ecuación \ref{eq:BalancePotenciasModulo}:
 \begin{equation}
 A_{c}\cdot G_{ef}=P_{c}+P_{Q}\label{eq:BalancePotenciasModulo}\end{equation}
@@ -403,7 +403,7 @@ En tiempos recientes se ha puesto de manifiesto la problemática asociada
 a ciertos niveles de dispersión de parámetros de células en un mismo
 módulo. En determinadas condiciones, el funcionamiento de este tipo
 de módulos también provoca la aparición de puntos calientes con gradientes
-elevados de temperatura, recortando así su vida útil \citep{Lorenzo.Martinez.ea2009}.
+elevados de temperatura, recortando así su vida útil \cite{Lorenzo.Martinez.ea2009}.
 
 
 \section{Generador Fotovoltaico}
@@ -442,7 +442,7 @@ parámetros provoca que la potencia eléctrica total sea inferior a
 la suma de las individuales.
 
 Para abordar el cálculo del comportamiento del generador es preciso
-emplear herramientas de análisis estadístico. Según \citep{Zilles1993}
+emplear herramientas de análisis estadístico. Según \cite{Zilles1993}
 la corriente de máxima potencia de un conjunto de módulos puede caracterizarse
 por una distribución tipo Weibull:\begin{equation}
 f(I_{mpp})=\alpha\beta^{-\alpha}I_{mpp}^{\alpha-1}exp\left[-\left(\frac{I_{mpp}}{\beta}\right)^{\alpha}\right]\end{equation}
@@ -488,7 +488,7 @@ simulando su funcionamiento a sol real. La indeterminación asociada
 a este método en relación a las medidas a sol real son del mismo rango
 que la separación entre categorías. Como ha sido puesto de relieve
 recientemente en el contexto de controles de calidad de plantas fotovoltaicas
-\citep{Lorenzo.Moreton.ea2008}, estas medidas conllevan un error
+\cite{Lorenzo.Moreton.ea2008}, estas medidas conllevan un error
 asociado que limitan su aplicación para la construcción de las categorías
 de módulos. En esta experiencia se demostró que la desviación estándar
 de las diferencias entre los valores recogidos en el {}``flash-list''
