--- a/libro/CelulaSolar.tex
+++ b/libro/CelulaSolar.tex
@@ -737,7 +737,7 @@ a partir de la combinación entre la ecuación \ref{eq:MPP_derivada}
 y la \ref{eq:EcuacionCelulaFinal} conduce a un sistema de ecuaciones
 implícitas cuya resolución no es evidente. Una aproximación a esta
 solución viene dada por la propuesta debida a J.M. Ruiz (según queda
-recogida en el anexo 2 de \citep{Alonso-Garcia2005})%
+recogida en el anexo 2 de \cite{Alonso-Garcia2005})%
 \footnote{Implementada en las funciones
   \href{http://search.r-project.org/R/library/solaR/html/fProd.html}{\texttt{fProd}}
   y %
@@ -817,7 +817,7 @@ y \ref{eq:VmppFactorFormaConstante}.
 
 Resumimos con brevedad los principales pasos que componen el proceso
 de fabricación de una célula solar de silicio cristalino. El lector
-interesado puede dirigirse a las referencias \citep{Luque.Hegedus2003,Castaner.Markvart2003,Green1995}.
+interesado puede dirigirse a las referencias \cite{Luque.Hegedus2003,Castaner.Markvart2003,Green1995}.
 
 El silicio puede extraerse de la cuarcita obteniendo silicio de grado
 metalúrgico (98\% pureza). La industria de la electrónica necesita
