--- a/libro/Creditos.tex
+++ b/libro/Creditos.tex
@@ -11,10 +11,10 @@ a documentos externos están marcados en color azul.
 
 \rule[.5ex]{\linewidth}{1pt}
 Las simulaciones y cálculos numéricos han sido realizados con el paquete
-\texttt{solaR} \citep{Perpinan2012b} integrado en el software libre
-\texttt{R-project} \citep{RDevelopmentCoreTeam2013}. Las gráficas
+\texttt{solaR} \cite{Perpinan2012b} integrado en el software libre
+\texttt{R-project} \cite{RDevelopmentCoreTeam2013}. Las gráficas
 correspondientes a estos cálculos han sido generados con el paquete
-\texttt{lattice} \citep{Sarkar2010} de \texttt{R-project}. 
+\texttt{lattice} \cite{Sarkar2010} de \texttt{R-project}. 
 
 La escritura y edición del documento ha sido realizada el sistema de preparación
 de documentos \href{http://www.latex-project.org/}{\LaTeX{}} , empleando
