--- a/libro/ESF.tex
+++ b/libro/ESF.tex
@@ -1,7 +1,6 @@
 \documentclass[oldfontcommands,a4paper]{memoir}
 
 \input{preambulo.tex} 
-
 % \renewcommand{\prebibhook}{Nota: todos los enlaces URL han sido
 %   comprobados en Marzo de 2013.}
 
@@ -81,8 +80,8 @@
 
 \backmatter
 
-\bibliographystyle{flexbib}
-\bibliography{../biblio}
+%%\bibliographystyle{flexbib}
+%%\bibliography{../biblio}
 
 
 \end{document}
