--- a/libro/Ejercicios.tex
+++ b/libro/Ejercicios.tex
@@ -1004,7 +1004,7 @@ grado de libertad (dos incógnitas con una única condición) que sólo
 puede resolverse formalmente optimizando el coste de cable total. 
 
 Para evitar la complejidad de este ejercicio de
-optimización\footnote{La referencia \citep{Perpinan2012b} detalla el
+optimización\footnote{La referencia \cite{Perpinan2012b} detalla el
   procedimiento de cálculo que permite optimizar la masa de cable.}, imponemos una
 caída de tensión razonable en cada tramo y resolvemos el valor de
 sección correspondiente. Por ejemplo, imponemos una caída de tensión
