--- a/libro/GeometriaSolar.tex
+++ b/libro/GeometriaSolar.tex
@@ -260,7 +260,7 @@ Su complementario es la altura o elevación solar.
 El cambio de unos ejes a otros (figura \ref{fig:RelacionSistemasCoordenadas})
 no es más que el resultado de un giro de ángulo igual a la latitud
 del lugar, que puede ser expresado mediante una matriz de giro (ecuación
-\ref{eq:MatrizGiroCollins})\citep{CollinsII2004}. Sin embargo, en
+\ref{eq:MatrizGiroCollins})\cite{CollinsII2004}. Sin embargo, en
 el ecuador terrestre se produce el cambio de signo de la latitud y
 el vector $\vec{\mu}_{h}$ de los ejes locales cambia de sentido respecto
 a los ejes terrestres. Estas circunstancias se tienen en cuenta en
@@ -522,7 +522,7 @@ la duración del día varía con el paso de las estaciones: la orbita
 elíptica alrededor del Sol y el ángulo de inclinación del plano de
 la eclíptica respecto al plano ecuatorial. La ecuación \ref{eq:EoT}
 (figura \ref{fig:EoT}) proporciona el valor de la ecuación del tiempo
-en minutos \citep{Whitman2003}.
+en minutos \cite{Whitman2003}.
 
 \begin{equation}
 \mathrm{EoT}=229.18\cdot\left(-0.0334\cdot\sin(M)+0.04184\cdot\sin\left(2\cdot
@@ -989,7 +989,7 @@ El ángulo con el vector solar es:
 
 Se calcula ahora $\left.\vec{\mu}_{s}\right|_{ejes\ moviles}$ utilizando
 como matriz de giro la transpuesta de la ecuación \eqref{MatrizGiroPolar}
-\citep{CollinsII2004}:
+\cite{CollinsII2004}:
 
 \begin{equation}
 \left.\vec{\mu}_{s}\right|_{ejes\ moviles}=\left(\begin{array}{ccc}
