--- a/libro/Introduccion.tex
+++ b/libro/Introduccion.tex
@@ -154,7 +154,7 @@ y la desalinización del agua extraída con sistemas de ósmosis inversa.
 
 Según el informe \emph{Global Market Outlook for Photovoltaics until
 2016} de la \emph{European Photovoltaics Industry Association}
-\citep{EPIA2012} la potencia fotovoltaica instalada en el planeta
+\cite{EPIA2012} la potencia fotovoltaica instalada en el planeta
 al finalizar el 2011 era superior a los 69 GW. Europa es la región
 que lidera el sector, con más de 51 GW instalados en 2011, lo que
 representa alrededor del 75\% de la potencia total mundial. A
