--- a/libro/ResumenDispositivosFV.tex
+++ b/libro/ResumenDispositivosFV.tex
@@ -2,8 +2,8 @@
 
 Este capítulo es un breve resumen de los aspectos más importantes
 sobre el funcionamiento de las células y módulos fotovoltaicos. El
-lector interesado puede acudir a las referencias \citep{Lorenzo2006c,Green1995,Wenham.Green.ea2000}
-para ampliar estos contenidos y a la referencia \citep{LopezAraujo1986}
+lector interesado puede acudir a las referencias \cite{Lorenzo2006c,Green1995,Wenham.Green.ea2000}
+para ampliar estos contenidos y a la referencia \cite{LopezAraujo1986}
 para estudiar la física de los dispositivos electrónicos.
 
 
@@ -223,7 +223,7 @@ El encapsulante a base de EVA, combinado con un tratamiento en vacío
 y las capas frontal y posterior, evita la entrada de humedad en el
 módulo, señalada como la causa principal de la degradación a largo
 plazo de módulos fotovoltaicos. Además, esta combinación permite obtener
-altos niveles de aislamiento eléctrico \citep{Wenham.Green.ea2000}. 
+altos niveles de aislamiento eléctrico \cite{Wenham.Green.ea2000}. 
 
 Una configuración eléctrica muy común hasta hace unos años empleaba
 36 células en serie para obtener módulos con potencias comprendidas
