--- a/libro/SFBombeo.tex
+++ b/libro/SFBombeo.tex
@@ -39,7 +39,7 @@ de cada uno de ellos.
 \end{centering}
 
 \caption[Componentes de un sistema fotovoltaico de bombeo de agua.]{\label{fig:ComponentesSFB} Componentes de un sistema fotovoltaico
-de bombeo de agua. Adaptado de \citep{Lorenzo.Narvarte2006}.}
+de bombeo de agua. Adaptado de \cite{Lorenzo.Narvarte2006}.}
 
 \end{figure}
 
@@ -393,7 +393,7 @@ Para comprender la estrategia de funcionamiento del control escalar,
 es de particular importancia saber que el par de giro máximo de un
 motor de inducción es proporcional al cuadrado del ratio entre la
 tensión y la frecuencia de entrada (ecuación \ref{eq:ParCuadraticoMotorInduccion})
-\citep{FraileMora2003}:
+\cite{FraileMora2003}:
 
 \begin{equation}
 T_{max}=k_{T}\left(\frac{V_{1}}{f_{1}}\right)^{2}\label{eq:ParCuadraticoMotorInduccion}\end{equation}
@@ -426,9 +426,9 @@ relación anterior para este tipo de cargas no alcanza los valores
 de eficiencia óptimos para el conjunto motobomba. Para este tipo de
 cargas se han propuesto otros modos de control, desde una modificación
 de la curva del control escalar de forma que $V_{1}=k_{V}\cdot f_{1}^{2}$
-\citep{Abella.Lorenzo.ea2003,Narvarte.Lorenzo2006}, o métodos más
+\cite{Abella.Lorenzo.ea2003,Narvarte.Lorenzo2006}, o métodos más
 sofisticados como el control de deslizamiento o el control vectorial
-\citep{Bose2002,Bhat.Pittet.ea1987,Correa.Nevesy.ea2008,Famouri.Cathey1991}.
+\cite{Bose2002,Bhat.Pittet.ea1987,Correa.Nevesy.ea2008,Famouri.Cathey1991}.
 
 La aproximación realizada en la ecuación \ref{eq:TensionFrecuenciaFlujo}
 no es valida a bajas frecuencias. En esta región es necesario aumentar
@@ -561,11 +561,11 @@ suficientemente grandes, práctica habitual ya que el elevado coste
 de los sistemas de bombeo obliga al uso de sistemas de transporte
 y distribución eficientes. De hecho, obtener pérdidas de fricción
 por debajo del 5\% de la altura total ($H_{f}<0.05\cdot H_{T}$) constituye
-un requisito de optimización de los sistemas fotovoltaicos \citep{Narvarte.Lorenzo2006}.
+un requisito de optimización de los sistemas fotovoltaicos \cite{Narvarte.Lorenzo2006}.
 
 Se puede definir una {}``altura total equivalente'', $H_{TE}$,
 como el hipotético valor constante que llevaría al mismo volumen de
-agua bombeada que la ecuación \ref{eq:CaudalIntegral} \citep{Narvarte2001}:
+agua bombeada que la ecuación \ref{eq:CaudalIntegral} \cite{Narvarte2001}:
 
 \begin{equation}
 Q_{d}=\frac{P_{g}^{*}\cdot}{2.725\cdot G_{stc}\cdot H_{TE}}\cdot\intop_{dia}G\cdot\frac{\eta_{g}}{\eta_{g}^{*}}\cdot\eta_{inv}\cdot\eta_{mp}\mathrm{dt}\label{eq:CaudalHTE}\end{equation}
@@ -594,7 +594,7 @@ de los pozos están, normalmente, referidos a este caudal máximo al
 que se puede extraer el agua de ellos ($Q_{t}=Q_{max}$). 
 
 Con los resultados de este ensayo es posible calcular $H_{TE}$ mediante
-\citep{Narvarte2001}:
+\cite{Narvarte2001}:
 
 \begin{equation}
 H_{TE}=H_{OT}+H_{ST}+(\frac{H_{DT}-H_{ST}}{Q_{T}})\cdot Q_{AP}+H_{f}(Q_{AP})\end{equation}
@@ -750,7 +750,7 @@ adecuada de agua para consumo humano es de 50 litros por habitante.
 En crisis humanitarias, el estándar mínimo es de 3 litros en climas
 templados y 5 litros en climas cálidos. En programas de cooperación
 se consideran abastecimientos del orden de 30 a 35 litros por persona.
-Para sistemas fotovoltaicos, la referencia \citep{Narvarte.Lorenzo2006}
+Para sistemas fotovoltaicos, la referencia \cite{Narvarte.Lorenzo2006}
 recomienda la cifra de 25 litros por habitante si el suministro se
 realiza a través de fuentes comunitarias y 45 litros por habitante
 si el suministro se realiza con grifo en cada domicilio.
