--- a/libro/SFCR.tex
+++ b/libro/SFCR.tex
@@ -35,7 +35,7 @@ retribución con prima (\emph{feed-in tariff}) y el balance neto
 
 En el mecanismo de retribución con prima\footnote{Este
 mecanismo es de uso común en los países europeos. La referencia
-\citep{Collado2009} proporciona información sobre el uso de este
+\cite{Collado2009} proporciona información sobre el uso de este
 mecanismo en diferentes países europeos, donde es frecuentemente
 implementado.}, generalmente el propietario
 del SFCR recibe ingresos derivados de la energía total producida
@@ -54,7 +54,7 @@ puede ocasionar un crecimiento desordenado que disocie las ubicaciones
 de los sistemas fotovoltaicos de los centros de consumo. 
 
 El mecanismo de balance neto\footnote{Este mecanismo es la elección
-habitual en los Estados Unidos de América. La referencia \citep{Chapman.Rose2011}
+habitual en los Estados Unidos de América. La referencia \cite{Chapman.Rose2011}
 detalla las diferentes modalidades empleadas en varios estados.} compensa los saldos de energía eléctrica
 entre el SFCR y un sistema de consumo asociado. Cuando la producción
 del SFCR supera al consumo, la red eléctrica\footnote{En este
@@ -88,7 +88,7 @@ prima y, por tanto, se obviará el consumo asociado.
 % \begin{itemize}
 
 
-% \item RD. 1578/2008 \citep{RealDecreto2008}:
+% \item RD. 1578/2008 \cite{RealDecreto2008}:
 
 %   \begin{itemize}
 
@@ -121,7 +121,7 @@ prima y, por tanto, se obviará el consumo asociado.
 
 %   \end{itemize}
 
-% \item RD. 1699/2011 \citep{RealDecreto2011}
+% \item RD. 1699/2011 \cite{RealDecreto2011}
 %   \begin{itemize}
 %   \item Establece las condiciones administrativas, contractuales,
 %     económicas y técnicas básicas para la conexión a las redes de
@@ -160,18 +160,18 @@ prima y, por tanto, se obviará el consumo asociado.
 %   \nomenclature[BT]{BT}{Baja Tensión}\nomenclature[MT]{MT}{Media
 %     Tensión}
 
-% \item RD. 436/2004 \citep{RealDecreto2004}: establece los
+% \item RD. 436/2004 \cite{RealDecreto2004}: establece los
 %   procedimientos de legalización de un SFCR. Algunos de estos
 %   procedimientos han sido actualizados por el RD 661/2007
 %   \cite{RD-661-2007} y por el RD 1578/2008.
 
 % \item Reglamento Electrotécnico de Baja Tensión (2002)
-%   \citep{RD_842_2002}\nomenclature[REBT]{REBT}{Reglamento
+%   \cite{RD_842_2002}\nomenclature[REBT]{REBT}{Reglamento
 %     Electrotécnico de Baja Tensión}.  Debe destacarse que no hay un
 %   capítulo específico dedicado a los SFCR.
 
 % \item Documento HE5 del Codigo Técnico de la Edificación
-%   \citep{CodigoTecnico2006}.
+%   \cite{CodigoTecnico2006}.
 
 % \end{itemize}
 
@@ -235,7 +235,7 @@ terreno en relación a un sistema de doble eje.
 
 El lector interesado en sistemas de seguimiento podrá encontrar mayor
 información al respecto y un conjunto de ecuaciones que describen
-los diferentes métodos en \citep{Perpinan2008}. 
+los diferentes métodos en \cite{Perpinan2008}. 
 
 El mejor aprovechamiento de terreno depende directamente del porcentaje
 de radiación que quedará sombreada por los seguidores cercanos, lo
@@ -307,7 +307,7 @@ orientación de la fachada que se pretende sombrear, su inclinación
 será un compromiso entre la producción energética del SFCR y la cantidad
 de sombra deseada, y el tamaño del generador dependerá del área acristalada
 a sombrear. 
-% Es recomendable acudir a la referencia \citep{PV-database}
+% Es recomendable acudir a la referencia \cite{PV-database}
 % para contemplar las variadas posibilidades de uso de sistemas fotovoltaicos
 % en edificios.
 
@@ -803,7 +803,7 @@ modificando la tensión de entrada del convertido DC/DC mediante cambios
 en el patrón de conmutación del transistor $S_{B}$ de la figura \ref{fig:InversorMonofasicoVSI}). 
 
 Existen diversos algoritmos de búsqueda y seguimiento del MPP sin
-que hasta ahora exista consenso sobre el mejor de ellos \citep{Hohn.Ropp2002}.
+que hasta ahora exista consenso sobre el mejor de ellos \cite{Hohn.Ropp2002}.
 Aquí describiremos dos de ellos: el denominado {}``alterar y observar''
 (P\&O, \emph{perturb and observe}) y el de {}``conductancia incremental''. 
 
@@ -1014,7 +1014,7 @@ métodos pasivos y activos con el objetivo de reducir en la medida
 de lo posible esta zona. Sin embargo, el análisis de este fenómeno
 debe contextualizarse atendiendo a la probabilidad de que ocurra esa
 situación de isla. En este sentido, un estudio experimental de la
-Agencia Internacional de la Energía \citep{Verhoeven2002,Cullen.Thornycroft.ea2002}
+Agencia Internacional de la Energía \cite{Verhoeven2002,Cullen.Thornycroft.ea2002}
 llega a las siguientes conclusiones: 
 \begin{itemize}
 \item La probabilidad de que se de una situación de balance entre consumo
@@ -1054,7 +1054,7 @@ invernales y la que favorece la generación en verano. Una recomendación
 sencilla consiste en inclinar el generador $10\degree$ menos que
 la latitud del lugar. Es posible obtener valores más precisos con
 la ecuación \ref{eq:InclinacionOptima}, en la que los ángulos de
-inclinación y latitud están en grados \citep{Lorenzo2006c}. En cualquier
+inclinación y latitud están en grados \cite{Lorenzo2006c}. En cualquier
 caso, es necesario que la inclinación no se encuentre por debajo de
 $15\degree$ para permitir que la suciedad acumulada pueda ser retirada
 por la lluvia.\nomenclature[betaopt]{$\beta_{opt}$}{Ángulo de inclinación que optimiza el funcionamiento de un sistema fotovoltaico}\nomenclature[lat]{$\phi$}{Latitud del lugar}\begin{equation}
@@ -1338,7 +1338,7 @@ a partir de la potencia suministrada por el generador fotovoltaico,
 $P_{dc}$, se empleará la curva de eficiencia del inversor, $\eta_{inv}$\nomenclature[etainv]{$\eta_{inv}$}{Eficiencia de un inversor}
 (figura \ref{fig:Curva-de-eficiencia}). Esta relación puede modelarse
 con una función basada en tres coeficientes y la normalización de
-la potencia de salida \citep{Jantsch.Schmidt.ea1992}:
+la potencia de salida \cite{Jantsch.Schmidt.ea1992}:
 
 \begin{equation}
 \eta_{inv}=\frac{p_{o}}{p_{o}+k_{0}^{o}+k_{1}^{o}p_{o}+k_{2}^{o}p_{o}^{2}}\end{equation}
@@ -1393,7 +1393,7 @@ sobredimensionar el generador, siendo recomendable una relación de
 $P_{g}^{*}/P_{inv}$ de 1, y en todo caso no superar un sobredimensionamiento
 del 20\%.
 
-En todo caso, es posible demostrar \citep{Lorenzo2005} que la elección
+En todo caso, es posible demostrar \cite{Lorenzo2005} que la elección
 de esta relación no es tan importante como elegir un inversor con
 buena curva de eficiencia. 
 
@@ -1407,7 +1407,7 @@ sombreado, la configuración eléctrica de los módulos y el generador
 fotovoltaico, y de la amplitud del rango de búsqueda de MPP del inversor,
 por citar algunos condicionantes. Por ejemplo, investigadores que
 han analizado el funcionamiento de un gran número de sistemas en Alemania
-calculan cifras que oscilan entre el 4\% y hasta el 30\% \citep{Decker.Jahn1997,Jahn.Nasse2004}.
+calculan cifras que oscilan entre el 4\% y hasta el 30\% \cite{Decker.Jahn1997,Jahn.Nasse2004}.
 No deben olvidarse las averías por punto caliente en módulos sin diodo
 de by-pass, o con configuración inadecuada, efecto tanto más patente
 cuanto más recurrentemente aparecen sombras en la zona no protegida.
@@ -1445,7 +1445,7 @@ necesaria son necesarios elevados tiempos de cálculo. Otro enfoque
 consiste en describirlos por su situación en un mapa de coordenadas
 cilíndricas (azimut y altura). La ventaja de este método es que la
 caracterización de los objetos puede conseguirse con procedimientos
-sencillos \citep{Caamano1998,Quaschning.Hanitsch1998}. Este método
+sencillos \cite{Caamano1998,Quaschning.Hanitsch1998}. Este método
 sirve para describir la reducción en la radiación vista por un observador
 situado en un punto concreto del generador. Por tanto, puede no ser
 adecuado para estudios precisos de funcionamiento del generador en
@@ -1453,7 +1453,7 @@ unas condiciones concretas, y su aplicación a generadores de gran
 tamaño debe realizarse con precaución. 
 
 Este tratamiento es el adoptado en el Código Técnico de la Edificación
-\citep{CodigoTecnico2006}. El procedimiento consiste en la comparación
+\cite{CodigoTecnico2006}. El procedimiento consiste en la comparación
 del perfil de obstáculos que afecta a la superficie de estudio con
 el diagrama de trayectorias del sol. Los pasos a seguir son los siguientes: 
 \begin{enumerate}
@@ -1524,7 +1524,7 @@ FS & \simeq & 6.3\%\end{eqnarray*}
 Suele considerarse aceptable un factor de sombras anual con valores
 comprendidos entre el 2 y el 4\%, tanto en instalaciones estáticas%
 \footnote{Como límite, debe tenerse en cuenta que el Código Técnico de la Edificación
-\citep{CodigoTecnico2006} obliga a que las pérdidas por sombra sean
+\cite{CodigoTecnico2006} obliga a que las pérdidas por sombra sean
 inferiores al 10\% como caso general, al 15\% en instalaciones de
 superposición y al 20\% en instalaciones de integración arquitectónica.%
 } como de seguimiento. En casos específicos este factor puede ser más
@@ -1549,14 +1549,14 @@ un sistema de seguimiento de doble eje necesita un ROT de 6.
 
 La reducción de potencia para una fracción de sombra dada depende de
 la configuración eléctrica del generador fotovoltaico. Esta reducción
-está comprendida entre dos extremos \citep{Gordon.Wenger1991}. 
+está comprendida entre dos extremos \cite{Gordon.Wenger1991}. 
 El límite superior o pesimista asume que el sombreado de cualquier
 parte del generador supone una potencia nula a la salida.
 El límite inferior u optimista asume que la reducción de potencia es
 proporcional a la fracción sombreada de radiación directa. 
 Sin embargo, no es evidente establecer relaciones de uso general que representen 
 la variedad de casos que aparecen entre estos límites. 
-Gordon y Wenger \citep{Gordon.Wenger1991} calculan que, en una base anual,
+Gordon y Wenger \cite{Gordon.Wenger1991} calculan que, en una base anual,
 la aproximación optimista es el más adecuado, particularmente en el
 caso de generadores de gran tamaño, en los que la modificación de la
 curva I-V en algunos módulos debido a la sombra y al funcionamiento de
@@ -1624,7 +1624,7 @@ es necesario simular el funcionamiento del sistema para diferentes
 posiciones relativas de los seguidores, y tomar la decisión en base
 a los resultados de productividad y ROT de cada
 posibilidad\footnote{Implementado en la función \href{http://search.r-project.org/R/library/solaR/html/optimShd.html}{\texttt{optimShd}} de
-  \texttt{solaR} \cite{Perpinan2012b}} \citep{Perpinan2008}.:
+  \texttt{solaR} \cite{Perpinan2012b}} \cite{Perpinan2008}.:
 
 La geometría de un sistema de seguimiento a doble eje está determinada
 por los siguientes parámetros (figuras \ref{fig:Sombras2X} y \ref{fig:DimensionesSeguidorSombra})
@@ -1994,7 +1994,7 @@ elementos que componen el sistema. No debe olvidarse que, la
 consideración de las condiciones del terreno (fronteras, irregularidades, vaguadas,
 etc.) obliga, en general, a decantarse por una separación algo difrente al
 resultado del ejercicio de optimización.  El lector interesado queda
-invitado a la lectura de la referencia \citep{Perpinan2012}.
+invitado a la lectura de la referencia \cite{Perpinan2012}.
 
 
 \subsubsection{Elección entre Sistemas}
@@ -2093,26 +2093,26 @@ La potencia entregada a la salida de un SFCR está determinada por los siguiente
 %     {\footnotesize Descomposición de radiación horizontal global en componentes
 %       directa y difusa.} & {\footnotesize Correlación entre la fracción de difusa y el índice
 %       de claridad. Para valores diarios es de uso común la propuesta de
-%       Collares-Pereira y Rabl \citep{Collares-Pereira.Rabl1979} mientras
+%       Collares-Pereira y Rabl \cite{Collares-Pereira.Rabl1979} mientras
 %       que para medias mensuales de valores diarios se emplea frecuentemente
-%       la propuesta de Page \citep{Page1961}.}\tabularnewline
+%       la propuesta de Page \cite{Page1961}.}\tabularnewline
 %     \midrule 
 %     {\footnotesize Estimación de irradiancia a partir de valores diarios
 %       de irradiación.} & {\footnotesize Generador empírico de perfil diario de irradiancia
-%       a partir de valores de irradiación global \citep{Collares-Pereira.Rabl1979}.}\tabularnewline
+%       a partir de valores de irradiación global \cite{Collares-Pereira.Rabl1979}.}\tabularnewline
 %     \midrule 
 %     {\footnotesize Transposición de irradiancia en el plano horizontal
 %       a la superficie inclinada.} & {\footnotesize El cálculo de la radiación directa emplea exclusivamente
 %       consideraciones geométricas. El tratamiento de la radiación difusa
 %       necesita modelar el comportamiento de la esfera celeste. Un modelo
-%       anisotrópico recomendable es el de Hay y McKay \citep{Hay.McKay1985}.}\tabularnewline
+%       anisotrópico recomendable es el de Hay y McKay \cite{Hay.McKay1985}.}\tabularnewline
 %     \midrule 
 %     {\footnotesize Irradiancia del albedo.} & {\footnotesize Puede modelarse como una irradiancia difusa isotrópica
 %       con un factor de reflexión igual a 0.2 (modificable si se dispone
 %       de información del terreno).}\tabularnewline
 %     \midrule 
 %     {\footnotesize Efectos de la suciedad y el ángulo de incidencia.} & {\footnotesize Son recomendables las ecuaciones propuestas por Martín
-%       y Ruiz \citep{Martin.Ruiz2001}.}\tabularnewline
+%       y Ruiz \cite{Martin.Ruiz2001}.}\tabularnewline
 %     \midrule
 %     {\footnotesize Efecto del sombreado.} & {\footnotesize Es razonable suponer que el sombreado sólo afecta a
 %       la componente directa de la irradiancia. Por otra parte, una posible
@@ -2136,7 +2136,7 @@ La potencia entregada a la salida de un SFCR está determinada por los siguiente
 % \emph{estáticos}, el procedimiento de la tabla \ref{Tabla calculation
 %   procedure} puede ser aproximado mediante dos regresiones que
 % relacionan la irradiación anual global efectiva con la irradiación
-% anual global en el plano horizontal \citep{Caamano1998,Lorenzo2002,
+% anual global en el plano horizontal \cite{Caamano1998,Lorenzo2002,
 %   Lorenzo2006c}. En primer lugar, se estima la relación entre la
 % irradiación en el plano horizontal con la incidente en un generador
 % con orientación e inclinación óptimas:
@@ -2266,7 +2266,7 @@ caracterizar la calidad de un sistema fotovoltaico.
 Las pérdidas que habitualmente incluye un PR anual son las que se
 recogen en la Tabla \ref{tab:PR}. El análisis de funcionamiento de diversos sistemas FV europeos llevado
 a cabo por la Agencia Internacional de la Energía
-\citep{Clavadetscher.Nordmann2007} ha mostrado que el rango de valores
+\cite{Clavadetscher.Nordmann2007} ha mostrado que el rango de valores
 que toma el \emph{performance ratio} anual es bastante amplio, con mínimos
 de 0,4 y máximos de 0,85. Para sistemas instalados desde 1996, el
 valor promedio de esta base de datos europea ha sido de 0,74.
