--- a/libro/SFER.tex
+++ b/libro/SFER.tex
@@ -319,7 +319,7 @@ estos límites varían con la corriente de carga y con la temperatura.
 Para una temperatura de $\SI{25}{\celsius}$ parece razonable utilizar
 un valor comprendido entre $\SI{2.3}{\volt}$ y $\SI{2.4}{\volt}$,
 tal y como se indica en la Norma Técnica Universal para Sistemas Fotovoltaicos
-Domésticos \citep{Egido.Lorenzo1998}.
+Domésticos \cite{Egido.Lorenzo1998}.
 
 %
 \begin{figure}
@@ -332,7 +332,7 @@ un proceso de carga a corriente constante]{Curvas de evolución de la tensión e
 un proceso de carga a corriente constante, para diferentes valores
 de corriente de carga y temperatura ambiente. Las curvas están particularizadas
 para una batería con una capacidad $C_{10}=\SI{300}{Ah}$. Se ha utilizado
-el modelo de comportamiento propuesto en la referencia \citep{Copetti.Lorenzo.ea1993}.\label{fig:CurvasCarga}}
+el modelo de comportamiento propuesto en la referencia \cite{Copetti.Lorenzo.ea1993}.\label{fig:CurvasCarga}}
 
 \end{figure}
 
@@ -346,7 +346,7 @@ a la descarga total. Si nuevamente recurrimos a la tensión como indicador
 del estado de carga de la batería, el equipo regulador deberá evitar
 la descarga de la batería a partir de un umbral localizado en torno
 a los $\SI{2}{\volt}$ para esta batería concreta. Tal y como se indica
-en \citep{Egido.Lorenzo1998}, este valor es característico de cada
+en \cite{Egido.Lorenzo1998}, este valor es característico de cada
 tipo de batería, y por tanto deben evitarse valores universales.
 
 %
@@ -390,7 +390,7 @@ eléctrica ($R_{BI}$ en el modelo). La figura \ref{fig:RegimenDescargaCapacidad}
 muestra que la la disminución de la temperatura reduce la capacidad
 de la batería para todos los regímenes de descarga. De forma aproximada,
 puede decirse que la capacidad para un régimen de descarga determinado
-baja a razón de $\SI{1}{\percent\per\celsius}$ \citep{Lorenzo1994}.
+baja a razón de $\SI{1}{\percent\per\celsius}$ \cite{Lorenzo1994}.
 Como situación extrema, si el electrolito se congela, no hay movimiento
 iónico, y por tanto la capacidad es nula. Para evitarlo, en lugares
 muy fríos hay que recurrir a densidades altas de electrolito .
@@ -471,7 +471,7 @@ y puede precipitar al fondo del vaso. Además de disminuir la capacidad,
 puede ocasionar cortocircuitos que causen la muerte de la batería.
 \end{itemize}
 Como resumen, los factores que influyen sobre la resistencia del acumulador
-al ciclado son \citep{Fullea1994}:
+al ciclado son \cite{Fullea1994}:
 \needspace{3\onelineskip}
 \begin{itemize}
 \item La profundidad de descarga: las descargas profundas disminuyen los
@@ -483,7 +483,7 @@ electrodos disminuyendo los ciclos de vida.
 \end{itemize}
 El ciclado y los agentes externos contribuyen a degradar el acumulador
 hasta que alcanza el fin de su vida útil, momento que puede ser definido
-como un valor mínimo en su capacidad útil \citep{Egido.Lorenzo1998}.
+como un valor mínimo en su capacidad útil \cite{Egido.Lorenzo1998}.
 
 
 \subsubsection{Composición}
@@ -597,7 +597,7 @@ fotovoltaicas se recomienda usar baterías estacionarias aireadas de
 placa positiva tubular, o al menos baterías SLI modificadas (placas
 más gruesas, mayor cantidad de electrolito por encima de las placas,
 más baratas que las estacionarias), con aleación de Pb-Sb en la rejilla
-y vaso transparente \citep{Egido.Lorenzo1998}.
+y vaso transparente \cite{Egido.Lorenzo1998}.
 
 
 \subsection{Regulador de carga}
@@ -678,7 +678,7 @@ manteniendo así el voltaje constante, y precisamente igual a este
 valor. Ambos tipos de reguladores y de estrategias de control son
 adecuadas para SHSs sin que parezca existir una ventaja real asociada
 a cada estrategia de control en términos de mejorar la vida útil de
-la batería \citep{Egido.Lorenzo1998}. En la práctica la selección
+la batería \cite{Egido.Lorenzo1998}. En la práctica la selección
 de los voltajes de fin de carga y reposición debe buscar una solución
 de compromiso que conjugue la carga completa de la batería (voltajes
 altos) y evitar la corrosión de las rejillas y el excesivo consumo
@@ -687,7 +687,7 @@ de batería (mediante ensayos, o recomendaciones del fabricante). Sin
 embargo, es importante notar que la sensibilidad del \textquotedblleft{}voltaje
 de fin de carga\textquotedblright{} al tipo de batería es relativamente
 baja y puede recurrirse a valores de uso general. El lector interesado
-puede recurrir a la información incluida en las referencias \citep{Egido.Lorenzo1998,Usher.Ross1998}
+puede recurrir a la información incluida en las referencias \cite{Egido.Lorenzo1998,Usher.Ross1998}
 que puede ser resumida en los siguientes puntos:
 \begin{itemize}
 \item En el caso de reguladores {}``on-off'' el \textquotedblleft{}voltaje
@@ -768,7 +768,7 @@ produce el proceso de encendido.
 
 La serie de encendidos y apagados repetidos degradan los componentes
 del tubo recortando la vida de la lámpara. En la Norma Técnica Universal
-\citep{Egido.Lorenzo1998} se recomienda que la lámpara resista un
+\cite{Egido.Lorenzo1998} se recomienda que la lámpara resista un
 mínimo de 10\,000 ciclos de encendido y apagado, y en todo caso,
 deberá resistir 5\,000 ciclos. 
 
@@ -933,7 +933,7 @@ Así, el dimensionado de estos sistemas híbridos es un ejercicio de
 optimización que deberá tener en cuenta el coste de adquisición, operación
 y mantenimiento de todos los equipos. El lector interesado en el diseño
 de estos sistemas puede acudir a la documentación suministrada con
-los programas informáticos HOMER \citep{Homer-Energy} y Hybrid2 \citep{Hybrid2}.
+los programas informáticos HOMER \cite{Homer-Energy} y Hybrid2 \cite{Hybrid2}.
 
 
 
@@ -947,7 +947,7 @@ Por simplicidad en la exposición supondremos que el consumo es constante
 a lo largo del año y que sólo ocurre por la noche. También asumiremos
 que los componentes del sistema FV no tienen pérdidas (quedarán incluidas
 dentro de $C_{A}$ y $C_{S}$) y pueden ser descritos por relaciones
-lineales \citep{Lorenzo.Narvarte2000}.
+lineales \cite{Lorenzo.Narvarte2000}.
 
 Así, el estado de carga, $SOC_{j}$, al finalizar un día $j$ determinado
 estará relacionado con el estado de carga del día anterior, $SOC_{j-1}$,
@@ -989,7 +989,7 @@ que la radiación es un proceso estocástico que, por definición, varía
 su comportamiento a lo largo del tiempo con una componente aleatoria
 impredecible. Así, es posible demostrar que los ejercicios de cálculo
 para probabilidades de pérdida de carga inferiores a $LLP=\num{1e-2}$
-carecen de utilidad \citep{Narvarte2001}.
+carecen de utilidad \cite{Narvarte2001}.
 
 Es posible condensar estas simulaciones para cada localidad, ajustando
 las curvas isofiables a una ecuación analítica:
@@ -1006,7 +1006,7 @@ del $LLP$ deseado a través de las ecuaciones:
 donde $f_1$, $f_2$, $u_1$ y $u_2$ son parámetros dependientes de la
 localidad en cuestión. Para su determinación es necesario
 realizar varias simulaciones previas aunque algunas curvas están disponibles
-en la referencia \citep{Egido.Lorenzo1992}. 
+en la referencia \cite{Egido.Lorenzo1992}. 
 
 A modo de ejemplo, los parámetros correspondientes a Madrid son $f_1=-0.2169$, $f_2=-0.7865$,
 $u_1=-1.2138$ y $u_2=-15.280$. La figura \ref{fig:Curvas-LLP} recoge 
@@ -1053,7 +1053,7 @@ de fiabilidad. En la actualidad, esta aproximación al dimensionado
 del sistema es, con diferencia, la más empleada en las licitaciones
 de electrificación rural fotovoltaica.
 
-Según la Norma Técnica Universal \citep{Egido.Lorenzo1998} los valores
+Según la Norma Técnica Universal \cite{Egido.Lorenzo1998} los valores
 recomendados para sistemas domésticos son $C_{A}=1.1$ y $3\leq C_{S}\leq5$,
 mientras que para aplicaciones profesionales son $1.2\leq C_{A}\leq1.3$
 y $5\leq C_{S}\leq8$. Estos valores de utilización general pueden
@@ -1064,7 +1064,7 @@ ser sustituidos en el caso de España por los recogidos en la Tabla
 \begin{table}
 \caption[Valores recomendados de capacidad del generador y capacidad del acumulador
 aplicables a SFA en España.]{Valores recomendados de capacidad del generador $C_{A}$ y capacidad
-del acumulador $C_{S}$ aplicables a SFA en España \citep{Lorenzo2006c}.\label{tab:ValoresCACSEspana}}
+del acumulador $C_{S}$ aplicables a SFA en España \cite{Lorenzo2006c}.\label{tab:ValoresCACSEspana}}
 
 
 \centering{}\begin{tabular}{ccccc}
@@ -1205,7 +1205,7 @@ $\eta_{bat}=0.85$ y $\eta_{c}=0.98$.
 Hasta aquí hemos considerado conocido el consumo requerido por las
 cargas conectadas al SFA. Sin embargo, el carácter aleatorio del comportamiento
 humano dificulta la caracterización del consumo eléctrico. Recogemos
-aquí las palabras de dos investigadores brasileños \citep{Morante.Zilles2008}:
+aquí las palabras de dos investigadores brasileños \cite{Morante.Zilles2008}:
 \begin{quotation}
 {}``{[}...{]} teóricamente, en una sociedad igualitaria la representación
 gráfica del consumo eléctrico debiera seguir la forma de una distribución
@@ -1233,7 +1233,7 @@ de la localidad.
 \caption[Distribución de probabilidades del consumo mensual en cuatro localidades
 brasileñas]{\label{fig:Distribucion-de-probabilidades}Distribución de probabilidades
 del consumo mensual en cuatro localidades brasileñas analizadas en
-\citep{Morante.Zilles2008}. Se señala el valor medio de consumo en
+\cite{Morante.Zilles2008}. Se señala el valor medio de consumo en
 cada una las curvas. }
 
 
@@ -1251,7 +1251,7 @@ de la logística y la instalación, y para poder prestar un servicio
 de mantenimiento eficiente. Sin embargo, al tratar a todos los usuarios
 de un mismo grupo como si su consumo fuese idéntico se obtendrán SFA
 cuya fiabilidad no será la de diseño. En la figura \ref{fig:ConsumoLLP}
-se analiza esta situación \citep{Lorenzo.Narvarte2000}. En primer
+se analiza esta situación \cite{Lorenzo.Narvarte2000}. En primer
 lugar se calcula el tamaño de un generador y una batería para satisfacer
 un determinado consumo, $L_{base}$, con una fiabilidad determinada,
 $LLP_{base}$. Con los resultados de este caso base, manteniendo invariables
@@ -1283,14 +1283,14 @@ Aún así, y con la debida cautela derivada de los comentarios anteriores,
 es útil establecer unos escenarios de consumo que sirvan de orientación
 para los primeros cálculos. Quedan recogidos en la tabla \ref{tab:Escenarios-de-consumo}. 
 
-Cerramos este capítulo recomendando la referencia \citep{IngenieriaSinFronteras1999}
+Cerramos este capítulo recomendando la referencia \cite{IngenieriaSinFronteras1999}
 al lector interesado en los aspectos sociológicos de la comunidad
 receptora que influyen en el diseño, implantación y mantenimiento
 de un sistema fotovoltaico.
 
 %
 \begin{table}
-\caption[Escenarios de consumo para SFA.]{Escenarios de consumo para SFA \citep{Lorenzo2006c}.\label{tab:Escenarios-de-consumo}}
+\caption[Escenarios de consumo para SFA.]{Escenarios de consumo para SFA \cite{Lorenzo2006c}.\label{tab:Escenarios-de-consumo}}
 
 
 \begin{tabular}{>{\centering}p{2cm}>{\centering}p{6cm}>{\centering}p{3cm}}
